# hexpr

./: CONTRIBUTING.md  Cargo.toml  PROMPT.md  README.md  generate_readme_images.sh  signature.json
examples/: parse.rs
src/: ast.rs  grammar.pest  inference.rs  interpret.rs  lib.rs  main.rs  parser.rs  tests.rs  translate.rs  unify.rs
tests/: test_parser.rs  test_translate.rs  test_translation.rs
