[package]
name = "hexpr"
version = "0.1.1"
edition = "2021"
description = "H-Expressions: A compact syntax for open hypergraphs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/statusfailed/hexpr"
documentation = "https://docs.rs/hexpr"

[dependencies]
pest = "2.7"
pest_derive = "2.1"
clap = "4.0"
open-hypergraphs = "0.2.4"
open-hypergraphs-dot = "0.2.1"
graphviz-rust = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
