[package]
name = "hexpr"
version = "0.2.1"
edition = "2021"
description = "H-Expressions: A compact syntax for open hypergraphs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/statusfailed/hexpr"
documentation = "https://docs.rs/hexpr"

[dependencies]
open-hypergraphs = "0.3.0"
pest = "2.7"
pest_derive = "2.1"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.100"
